add test case and rekognition
