# backend/src/post/dto/update-post.dto.ts
@@ -1,3 +1,0 @@
-import { CreatePostDto } from './create-post.dto';
-
-export interface UpdatePostDto extends CreatePostDto {}
